# pulse

./: .gitignore  Anchor.toml  Cargo.toml  PLAN.md  README.md  SUBMIT.md
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
app/public/: manifest.webmanifest
app/src/: App.css  App.tsx  index.css  main.tsx  theme.css  vite-env.d.ts
app/src/components/connect/: NetworkStatus.tsx  WalletButton.tsx  connect.css
app/src/hooks/: useNetworkHealth.ts  useWallet.ts
app/src/idl/: pulse.json
app/src/lib/: config.ts  er.ts  index.ts  program.ts  pulse-api.ts  pulse-chain.ts  pulse-er.ts  pulse-onchain.ts  session-store.ts  sfx.ts  solana.ts  types.ts  wallet.ts
docs/: ARCHITECTURE.md  BACKEND-3-PLANS.md  BACKEND-HANDOFF.md  CONNECTION-SCAFFOLD.md  generate_brief_pdf.py
programs/: README.md
programs/pulse/: Cargo.toml
programs/pulse/src/: lib.rs
scripts/: README.md  e2e-devnet.mjs  e2e-er.mjs
