[package]
name = "pulse"
version = "0.1.0"
description = "PULSE — mobile reaction battle on MagicBlock ER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pulse"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.8", features = ["anchor"] }
